<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".registerActivity">


    <EditText
        android:id="@+id/email_data"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:hint="@string/Enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/textHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pass_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cust_name" />

    <EditText
        android:id="@+id/cust_name"
        android:layout_width="168dp"
        android:layout_height="51dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="66dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@color/textHint"
        app:layout_constraintBottom_toTopOf="@+id/email_data"
        app:layout_constraintEnd_toEndOf="@+id/pass_data"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="@+id/pass_data"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_data"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="162dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/textHint"
        app:layout_constraintBottom_toTopOf="@+id/register_BT"
        app:layout_constraintEnd_toEndOf="@+id/email_data"
        app:layout_constraintTop_toBottomOf="@+id/email_data"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/register_BT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="112dp"
        android:background="@color/screenBackground"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_data" />

</androidx.constraintlayout.widget.ConstraintLayout>